--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "css-loader": "^4.1.1",
+    "file-loader": "^6.0.0",
     "layerconvert": "^1.0.2",
     "style-loader": "^1.2.1"
   }
