--- a/package.json
+++ b/package.json
@@ -5,11 +5,21 @@
   "private": true,
   "license": "MIT",
   "scripts": {
-    "build": "webpack --config webpack.config.js"
+    "watch": "webpack --watch",
+    "start": "webpack-dev-server --open",
+    "server": "node server.js",
+    "build": "webpack"
   },
   "devDependencies": {
+    "clean-webpack-plugin": "^3.0.0",
+    "csv-loader": "^3.0.3",
+    "express": "^4.17.1",
+    "html-webpack-plugin": "^4.3.0",
     "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-middleware": "^3.7.2",
+    "webpack-dev-server": "^3.11.0",
+    "xml-loader": "^1.2.1"
   },
   "dependencies": {
     "css-loader": "^4.1.1",
